k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horarios
  namespace: deisi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: horarios
  template:
    metadata:
      labels:
        app: horarios
    spec:
      containers:
        - name: horarios
          image: localhost/horarios:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
