k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: horarios
  namespace: deisi
spec:
  selector:
    app: horarios
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
