k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: horarios
  namespace: deisi
spec:
  ingressClassName: traefik
  rules:
    - host: horarios.134.122.74.17.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: horarios
                port:
                  number: 80
